--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,4 +9,34 @@
     <li><a href="/movies">View all movies</a></li>
     <li><a href="/users">View all users</a></li>
   </ul>
+
+  <h2>Create an Account</h2>
+  <form action="/users" method="POST" name="create-acct">
+      <p>
+        Email <input type="text" name="create-email" required=True>
+      </p>
+
+      <p>
+        Password <input type="password" name="create-password" required=True>
+      </p>
+
+      <p>
+        <input type="submit">
+      </p>
+    
+    </form>
+
+    <h2>Log-In</h2>
+  <form action="/users" name="login">
+    <p>
+      Email <input type="text" name="login-email" required=True>
+    </p>
+
+    <p>
+      Password <input type="password" name="login-password" required=True>
+    </p>
+    <p>
+      <input type="submit">
+    </p>
+  </form>
 {% endblock %}
